add config files delete interface
